# python-project-83

./: Makefile  README.md  build.sh  database.sql  for Anton.md  pyproject.toml
.github/workflows/: pyci.yml
page_analyzer/: .project  __init__.py  app.py  database.py  database.sql  html_parser.py  utils.py
page_analyzer/templates/: footer.html  index.html  layout.html  main_page.html  navigation.html  table_sites.html  url_page.html  urls.html  urls_id.html
page_analyzer/templates/components/: alerts.html  layout.html  navigation.html
